DataPipeline for Streaming DataSets
Updated swagger to fix dynamic url generation issue from specs

Issue-ID: ACUMOS-1198
